@@ -13,6 +13,9 @@ import org.yankov.mso.datamodel.Record;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.Optional;
 import java.util.ResourceBundle;
@@ -64,10 +67,10 @@ public class FlacProcessor {
             return Optional.empty();
         }
 
-        try (FileInputStream in = new FileInputStream(file)) {
+        try {
             Record record = new Record();
             record.setDataFormat(FLAC);
-            record.setBytes(in.readAllBytes());
+            record.setBytes(Files.readAllBytes(file.toPath()));
             ApplicationContext.getInstance().getLogger()
                               .log(Level.INFO, resourceBundle.getString(FILE_LOADED) + ": " + file.getName());
             return Optional.of(record);
